client/src/App.css
.App {

}

.App-header {
  /*background-color: #111;*/
  height: 150px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

body {
 font-family: 'Cabin', sans-serif;
}

.button {
 font-family: 'Cabin', sans-serif;
}

.gamesList li{
  display: inline-block;
  list-style-type: none;
  margin: 5px 10px 5px 10px
}

/*IC*/
.fa {
  color: red;
}
.user {
  color: white;
  padding-left: 15px;
  padding-top: 15px;
}
/*IC*/

.hidden{
  display: none;
}

iframe{
  position: absolute;
  width: 100%;
  height: 100%;
}


input {
  font-family: 'Cabin', sans-serif;
}

.menu button {
  font-family: 'Cabin', sans-serif;
}

#navigation{
  max-height: 240px;
  text-align: center;

}

.Overlay{
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  -moz-justify-content: center;
  -webkit-justify-content: center;
  justify-content: center;
  align-items: center;
  -webkit-align-items: center;
  -moz-align-items: center;
  height: 100%;
  width: 100%;
  margin: 0, auto;
  z-index: 2;
  position: absolute;
  text-align: center;
}

.playingStream {
  left, top: 0;
  margin-right: 10px;
  height: 0;
  width: 100%;
  display: inline-block;
  position: relative;
  padding-bottom: 56.25%;
}

#primaryRow {
  margin-left: 0;
  margin-right: 0;
}

.row{
  max-width: 100%;
  overflow-y: scroll;
}

#searchform{
  position: right;
}

#streamCanvas {
  width: 100%;
  text-align: left;
}

.streamContainer {
  margin-top: 15px;
  padding-right: 10px;
  width: 50%;
  display: inline-block;
  position: relative;
  flex: 0 1 auto;
  -webkit-flex: 0 1 auto;
  -moz-flex: 0 1 auto;
  /*background-color: #1c1e22;*/
  z-index: 1;
}

.streamDelete {
  height: 100%;
  width: 100%;
}

.streamList{
  max-height: 200px;
  text-align: center;
  max-width: 100%;
  overflow-y: scroll;
}

.streamListDiv{
  max-height: 200px;
  text-align: center;
  max-width: 100%;
  overflow-y: scroll;
}

.streamList li{
  display: inline-block;
  list-style-type: none;
  margin: 5px 10px 5px 10px
}
@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

